Discovered that the bug doesn't occur with pages router amongst other attempts to wrap pages as client objects in app router

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,7 +8,8 @@
 }
 
 html,
-body {
+body,
+#__next {
   display: flex;
   max-width: 100vw;
   height: 100%;
